fixing mobile horizontal scroll

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body, html
 body{
   position: relative; /* Ensures that the body won't have horizontal scroll */
   overflow-x: hidden;
+  width:100%;
 }
 
 
